# libgamemusic

./: .gitignore  .travis.yml  BUGS  Makefile.am  README  README.md  TODO  configure.ac  libgamemusic.pc.in
doc/: Makefile.am  camoto.xsl  dro2txt.1  dro2txt.xml  gamemus.1  gamemus.xml  libgamemusic.doxygen
examples/: Makefile.am  common-attributes.hpp  gamemus.cpp  hello.cpp
include/: Makefile.am
include/camoto/: Makefile.am  gamemusic.hpp
include/camoto/gamemusic/: audio-util.hpp  eventconverter-midi.hpp  eventconverter-opl.hpp  eventhandler.hpp  events.hpp  exceptions.hpp  manager.hpp  mus-generic-opl.hpp  music.hpp  musictype.hpp  opl-util.hpp  patch-midi.hpp  patch-opl.hpp  patch-pcm.hpp  patch.hpp  patchbank-midi.hpp  patchbank-opl.hpp  patchbank-singletype.hpp  patchbank.hpp  playback.hpp  synth-opl.hpp  synth-pcm.hpp  tempo.hpp  util-midi.hpp  util-opl.hpp  util-pcm.hpp
js/: Makefile.am  TODO  example.html  main.cpp  player.css  player.js
m4/: python2.m4
python/: Makefile.am  gamemusic.i
src/: Makefile.am  audio-util.hpp  decode-midi.cpp  decode-midi.hpp  decode-opl.cpp  decode-opl.hpp  encode-midi.cpp  encode-midi.hpp  encode-opl.cpp  encode-opl.hpp  eventconverter-midi.cpp  eventconverter-opl.cpp  eventhandler-playback-seek.cpp  eventhandler-playback-seek.hpp  eventhandler.cpp  events.cpp  exceptions.cpp  ins-ins-adlib.cpp  ins-ins-adlib.hpp  main.cpp  metadata-malv.cpp  metadata-malv.hpp  mus-cdfm-zone66-gus.cpp  mus-cdfm-zone66-gus.hpp  mus-cdfm-zone66.cpp  mus-cdfm-zone66.hpp  mus-cmf-creativelabs.cpp  mus-cmf-creativelabs.hpp  mus-dro-dosbox-v1.cpp  mus-dro-dosbox-v1.hpp  mus-dro-dosbox-v2.cpp  mus-dro-dosbox-v2.hpp  mus-dsm-dsik.cpp  mus-dsm-dsik.hpp  mus-generic-midi.cpp  mus-generic-midi.hpp  mus-generic-opl.cpp  mus-generic-opl.hpp  mus-got.cpp  mus-got.hpp  (+40 more)
tests/: Makefile.am  test-ins-ins-adlib.cpp  test-midi.cpp  test-mus-cdfm-zone66-gus.cpp  test-mus-cdfm-zone66.cpp  test-mus-cmf-creativelabs.cpp  test-mus-dro-dosbox-v1.cpp  test-mus-dro-dosbox-v2.cpp  test-mus-dsm-dsik.cpp  test-mus-got.cpp  test-mus-ibk-instrumentbank.cpp  test-mus-imf-idsoftware-common.hpp  test-mus-imf-idsoftware-type0.cpp  test-mus-imf-idsoftware-type1.cpp  test-mus-klm-wacky.cpp  test-mus-mid-type0.cpp  test-mus-mus-dmx.cpp  test-mus-raw-rdos.cpp  test-mus-s3m-screamtracker.cpp  test-mus-tbsa-doofus.cpp  test-music.cpp  test-music.hpp  test-musicreader.hpp  test-musictype-read.hpp  test-musictype-write.hpp  test-musicwriter.hpp  test-opl-normalise.cpp  test-opl.cpp  test-tempo.cpp  test-track-split.cpp  tests.cpp  tests.hpp
utils/: Makefile.am  dro2txt.cpp
