library_includedir = $(includedir)/@camoto_release@/camoto/
nobase_library_include_HEADERS = gamemusic.hpp
nobase_library_include_HEADERS += gamemusic/manager.hpp
nobase_library_include_HEADERS += gamemusic/eventconverter-midi.hpp
nobase_library_include_HEADERS += gamemusic/eventconverter-opl.hpp
nobase_library_include_HEADERS += gamemusic/events.hpp
nobase_library_include_HEADERS += gamemusic/exceptions.hpp
nobase_library_include_HEADERS += gamemusic/musictype.hpp
nobase_library_include_HEADERS += gamemusic/music.hpp
nobase_library_include_HEADERS += gamemusic/opl-util.hpp
nobase_library_include_HEADERS += gamemusic/patch.hpp
nobase_library_include_HEADERS += gamemusic/patch-midi.hpp
nobase_library_include_HEADERS += gamemusic/patch-opl.hpp
nobase_library_include_HEADERS += gamemusic/patch-pcm.hpp
nobase_library_include_HEADERS += gamemusic/patchbank.hpp
